--- a/ClientePersonaMicroservice/src/main/resources/application.properties
+++ b/ClientePersonaMicroservice/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+#Script datos mock
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:BaseDatos.sql
+
 server.servlet.context-path=/api
