funcionalidad para mejorar despliegue y documentación

--- a/CuentasMovimientosMicroservice/src/main/resources/application.properties
+++ b/CuentasMovimientosMicroservice/src/main/resources/application.properties
@@ -16,6 +16,13 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:BaseDatos.sql
 
+#comunicacion asincronica
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+#Nombre de la cola`
+rabbitmq.queue.name=cola1
 
 server.servlet.context-path=/api
 server.port=8081
