--- a/ClientePersonaMicroservice/pom.xml
+++ b/ClientePersonaMicroservice/pom.xml
@@ -60,8 +60,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!--Dependencias para comunicacion asincrona-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
