--- a/ClientePersonaMicroservice/src/main/resources/application.properties
+++ b/ClientePersonaMicroservice/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:BaseDatos.sql
 
 server.servlet.context-path=/api
+
+#comunicacion asincronica
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+#Nombre de la cola`
+rabbitmq.queue.name=cola1
