--- a/CuentasMovimientosMicroservice/pom.xml
+++ b/CuentasMovimientosMicroservice/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!--Dependencias para comunicacion asincrona-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
